
Tue Feb 19 20:23:11 CET 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: register the GetCustomAttributes method.
	* object.c, object.h: add mono_string_new_len ().
	* reflection.h, reflection.c: added mono_runtime_invoke(),
	mono_install_runtime_invoke(). Added
	mono_reflection_get_custom_attrs () to load custom attributes and
	create the attribute objects.

2002-02-19  Dick Porter  <dick@ximian.com>
	* threads-dummy-types.c:
	* threads-dummy-types.h:
	* threads-dummy.c:
	* threads-dummy.h:
	* threads-pthread-types.c:
	* threads-pthread-types.h:
	* threads-pthread.c:
	* threads-pthread.h:  Deleted obsolete files

2002-02-19  Dietmar Maurer  <dietmar@ximian.com>

	* class.c (mono_class_vtable): runtime init the class when we
	allocate static class data.

	* icall.c (ves_icall_System_Array_SetValue): check for null values.

	* appdomain.c (mono_domain_transfer_object): impl. hack for Arrays
	and String - but we will need generic marshalling support in the
	future. 
	(mono_init): set the domain name in a ms compatible way

	* object.c (mono_string_new_utf16): bug fix: use char[] instead of
	String[].

2002-02-18  Dietmar Maurer  <dietmar@ximian.com>

	* object.c (mono_array_clone): use alloca() instead of g_malloc  
	for sizes

	* appdomain.c (mono_domain_unload): impl.

Mon Feb 18 15:52:20 CET 2002 Paolo Molaro <lupus@ximian.com>

	* appdomain.c, object.c: fix intern pool implementation.
	* class.c: fix alignment code.

2002-02-16  Radek Doulik  <rodo@ximian.com>

	* icall.c (ves_icall_System_Enum_ToObject): in case of big endian
	and s2 > s1, just copy lower bytes to be compatible with little
	endian (i.e. 64bit value & 0xffffffff --> 32bit value)
	(ves_icall_System_Enum_ToObject): and likewise for s1 > s2

	* unicode.c (ves_icall_iconv_new_encoder): decide on big_endian,
	force big_endian to be 1 for big endian machines 
	(ves_icall_iconv_new_decoder): ditto

2002-02-16  Jeffrey Stedfast  <fejj@ximian.com>
